dtext: fix flickering dtext preview div.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -89,6 +89,8 @@ div.prose {
 }
 
 div.dtext-preview {
+  display: none;
+
   ul {
     margin-left: 1em;
   }
